[tool.poetry]
name = "bilimusic"
version = "0.1.1"
description = "BiliMusic helps you to download mp3 music file from bilibili video. Compared to a lot of same type applications and scripts, BiliMusic can do more, it can set metadata on mp3 file automatically."
authors = ["aoout <wuz66280@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.1.1"
eyed3 = "^0.9.6"
requests = "^2.27.1"
moviepy = "^1.0.3"
opencv-contrib-python = "^4.5.5"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylint = "^2.13.9"
pytest = "^7.1.2"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.scripts]
bilimusic = "bilimusic.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

