[tool.poetry]
name = "bilimusic"
version = "1.0.1"
description = "BiliMusic helps you to download mp3 music file from bilibili video. Compared to a lot of same type applications and scripts, BiliMusic can do more, it can set metadata on mp3 file automatically."
authors = ["aoout <wuz66280@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.0 <3.11"
pillow = "^9.2.0"
eyed3 = "^0.9.6"
fire = "^0.5.0"
requests = "^2.28.1"
moviepy = "^1.0.3"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylint = "^2.13.9"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.scripts]
bilimusic = "bilimusic.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

